[package]
name = "miden-pswap-example"
version = "0.1.0"
edition = "2021"
description = "Minimal example of PSWAP (Partial Swap) on Miden testnet"

[dependencies]
# Miden SDK v0.12
miden-client = { version = "0.12", features = ["testing", "tonic"] }
miden-client-sqlite-store = "0.12"
miden-lib = { version = "0.12", default-features = false }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.17.1", features = ["executable"] }
miden-assembly = "0.19"

# Async runtime
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }

# Randomness
rand = "0.9"

# Error handling
anyhow = "1.0"

[[example]]
name = "pswap_partial_fill"
path = "examples/pswap_partial_fill.rs"
