[package]
name = "miden-pswap-example"
version = "0.1.0"
edition = "2021"
description = "Minimal example of PSWAP (Partial Swap) on Miden testnet"

[dependencies]
# Miden SDK v0.13
miden-client = { version = "0.13", features = ["testing", "tonic"] }
miden-client-sqlite-store = { version = "0.13", package = "miden-client-sqlite-store" }
miden-standards = { version = "0.13", default-features = false, package = "miden-standards" }
miden-protocol = { version = "0.13", default-features = false, features = ["testing"], package = "miden-protocol" }
miden-crypto = { version = "0.19", features = ["executable"] }
miden-assembly = "0.20"

# Async runtime
tokio = { version = "1.46", features = ["rt-multi-thread", "macros"] }

# Randomness
rand = { version = "0.9" }
rand_chacha = "0.9.0"

# Error handling
anyhow = "1.0"

[[example]]
name = "pswap_partial_fill"
path = "examples/pswap_partial_fill.rs"

[[example]]
name = "pswap_simple"
path = "examples/pswap_simple.rs"
